<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_large_72"
                android:background="@color/color_gray"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rating"
                        style="@style/top_title"
                        android:text="@string/rating_body"/>

                    <TextView
                        style="@style/top_title"
                        android:text="@string/rating_title"/>

                </LinearLayout>

                <View style="@style/top_line"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/code_lines_number"
                        style="@style/top_title"
                        android:text="@string/line_code_body"/>

                    <TextView
                        style="@style/top_title"
                        android:text="@string/line_code_tilte"/>

                </LinearLayout>

                <View style="@style/top_line"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/projects_et"
                        style="@style/top_title"
                        android:text="@string/projects_body"/>

                    <TextView
                        style="@style/top_title"
                        android:text="@string/projects_title"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/contact_title">

                <ImageView
                    style="@style/icon_left"
                    android:src="@drawable/ic_call_black_24dp"
                    />

                <LinearLayout style="@style/item_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/phone"
                            style="@style/ed_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_phone_title"
                            android:inputType="phone"
                            android:text="@string/mobile_phone_body"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon_right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>

            </LinearLayout>

            <View style="@style/line"/>

            <LinearLayout style="@style/contact_title">

                <ImageView
                    style="@style/icon_left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout style="@style/item_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            style="@style/ed_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_title"
                            android:inputType="textEmailAddress"
                            android:text="@string/email_body"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon_right"
                    android:src="@drawable/ic_send_black_24dp"/>

            </LinearLayout>

            <View style="@style/line"/>

            <LinearLayout style="@style/contact_title">

                <ImageView
                    style="@style/icon_left"
                    android:src="@drawable/ic_vk"/>

                <LinearLayout style="@style/item_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/vk"
                            style="@style/ed_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_Vk_title"
                            android:text="@string/profile_Vk_body"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon_right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View style="@style/line"/>

            <LinearLayout style="@style/contact_title">

                <ImageView
                    style="@style/icon_left"
                    android:src="@drawable/ic_git"/>

                <LinearLayout style="@style/item_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/repository"
                            style="@style/ed_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/repo_title"
                            android:text="@string/repo_body"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon_right"
                    android:src="@drawable/ic_visibility_black_24dp"/>

            </LinearLayout>

            <View style="@style/line"/>


            <LinearLayout style="@style/contact_title">

                <ImageView
                    style="@style/icon_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_pin_black_24dp"/>

                <LinearLayout style="@style/item_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/about_me"
                            style="@style/ed_text"
                            android:hint="@string/about_me_title"
                            android:inputType="textMultiLine"
                            android:text="@string/about_me_body"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

